fixed background clipping

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ a:visited {
   /* justify-content: center; */
   flex-direction: column;
   align-items: center;
+
 }
 .App-header {
   padding-top: 25px;
@@ -67,6 +68,7 @@ a:visited {
   font-size: 35pt
 }
 .navigationDiv {
+  height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column
